feat: add gateway projects controlled
regenerated frontend models/apis
