# src/BindingChaos.Web/src/api/models/ApiResponseOfPaginatedResponseOfProjectListItemResponse.ts
@@ -1,0 +1,73 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * BindingChaos.Web.Gateway
+ * BindingChaos Web Gateway API
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+import type { PaginatedResponseOfProjectListItemResponse } from './PaginatedResponseOfProjectListItemResponse';
+import {
+    PaginatedResponseOfProjectListItemResponseFromJSON,
+    PaginatedResponseOfProjectListItemResponseFromJSONTyped,
+    PaginatedResponseOfProjectListItemResponseToJSON,
+    PaginatedResponseOfProjectListItemResponseToJSONTyped,
+} from './PaginatedResponseOfProjectListItemResponse';
+
+/**
+ * 
+ * @export
+ * @interface ApiResponseOfPaginatedResponseOfProjectListItemResponse
+ */
+export interface ApiResponseOfPaginatedResponseOfProjectListItemResponse {
+    /**
+     * 
+     * @type {PaginatedResponseOfProjectListItemResponse}
+     * @memberof ApiResponseOfPaginatedResponseOfProjectListItemResponse
+     */
+    data?: PaginatedResponseOfProjectListItemResponse | null;
+}
+
+/**
+ * Check if a given object implements the ApiResponseOfPaginatedResponseOfProjectListItemResponse interface.
+ */
+export function instanceOfApiResponseOfPaginatedResponseOfProjectListItemResponse(value: object): value is ApiResponseOfPaginatedResponseOfProjectListItemResponse {
+    return true;
+}
+
+export function ApiResponseOfPaginatedResponseOfProjectListItemResponseFromJSON(json: any): ApiResponseOfPaginatedResponseOfProjectListItemResponse {
+    return ApiResponseOfPaginatedResponseOfProjectListItemResponseFromJSONTyped(json, false);
+}
+
+export function ApiResponseOfPaginatedResponseOfProjectListItemResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): ApiResponseOfPaginatedResponseOfProjectListItemResponse {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'data': json['data'] == null ? undefined : PaginatedResponseOfProjectListItemResponseFromJSON(json['data']),
+    };
+}
+
+export function ApiResponseOfPaginatedResponseOfProjectListItemResponseToJSON(json: any): ApiResponseOfPaginatedResponseOfProjectListItemResponse {
+    return ApiResponseOfPaginatedResponseOfProjectListItemResponseToJSONTyped(json, false);
+}
+
+export function ApiResponseOfPaginatedResponseOfProjectListItemResponseToJSONTyped(value?: ApiResponseOfPaginatedResponseOfProjectListItemResponse | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'data': PaginatedResponseOfProjectListItemResponseToJSON(value['data']),
+    };
+}
+
