# src/BindingChaos.Web/src/api/models/ApiResponseOfProjectResponse.ts
@@ -1,0 +1,73 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * BindingChaos.Web.Gateway
+ * BindingChaos Web Gateway API
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+import type { ProjectResponse } from './ProjectResponse';
+import {
+    ProjectResponseFromJSON,
+    ProjectResponseFromJSONTyped,
+    ProjectResponseToJSON,
+    ProjectResponseToJSONTyped,
+} from './ProjectResponse';
+
+/**
+ * 
+ * @export
+ * @interface ApiResponseOfProjectResponse
+ */
+export interface ApiResponseOfProjectResponse {
+    /**
+     * 
+     * @type {ProjectResponse}
+     * @memberof ApiResponseOfProjectResponse
+     */
+    data?: ProjectResponse | null;
+}
+
+/**
+ * Check if a given object implements the ApiResponseOfProjectResponse interface.
+ */
+export function instanceOfApiResponseOfProjectResponse(value: object): value is ApiResponseOfProjectResponse {
+    return true;
+}
+
+export function ApiResponseOfProjectResponseFromJSON(json: any): ApiResponseOfProjectResponse {
+    return ApiResponseOfProjectResponseFromJSONTyped(json, false);
+}
+
+export function ApiResponseOfProjectResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): ApiResponseOfProjectResponse {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'data': json['data'] == null ? undefined : ProjectResponseFromJSON(json['data']),
+    };
+}
+
+export function ApiResponseOfProjectResponseToJSON(json: any): ApiResponseOfProjectResponse {
+    return ApiResponseOfProjectResponseToJSONTyped(json, false);
+}
+
+export function ApiResponseOfProjectResponseToJSONTyped(value?: ApiResponseOfProjectResponse | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'data': ProjectResponseToJSON(value['data']),
+    };
+}
+
