# src/BindingChaos.Web/src/api/models/CreateProjectRequest.ts
@@ -1,0 +1,81 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * BindingChaos.Web.Gateway
+ * BindingChaos Web Gateway API
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * Request model for creating a project in a user group.
+ * @export
+ * @interface CreateProjectRequest
+ */
+export interface CreateProjectRequest {
+    /**
+     * The owning user group identifier.
+     * @type {string}
+     * @memberof CreateProjectRequest
+     */
+    userGroupId?: string;
+    /**
+     * The project title.
+     * @type {string}
+     * @memberof CreateProjectRequest
+     */
+    title?: string;
+    /**
+     * The project description.
+     * @type {string}
+     * @memberof CreateProjectRequest
+     */
+    description?: string;
+}
+
+/**
+ * Check if a given object implements the CreateProjectRequest interface.
+ */
+export function instanceOfCreateProjectRequest(value: object): value is CreateProjectRequest {
+    return true;
+}
+
+export function CreateProjectRequestFromJSON(json: any): CreateProjectRequest {
+    return CreateProjectRequestFromJSONTyped(json, false);
+}
+
+export function CreateProjectRequestFromJSONTyped(json: any, ignoreDiscriminator: boolean): CreateProjectRequest {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'userGroupId': json['userGroupId'] == null ? undefined : json['userGroupId'],
+        'title': json['title'] == null ? undefined : json['title'],
+        'description': json['description'] == null ? undefined : json['description'],
+    };
+}
+
+export function CreateProjectRequestToJSON(json: any): CreateProjectRequest {
+    return CreateProjectRequestToJSONTyped(json, false);
+}
+
+export function CreateProjectRequestToJSONTyped(value?: CreateProjectRequest | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'userGroupId': value['userGroupId'],
+        'title': value['title'],
+        'description': value['description'],
+    };
+}
+
