# src/BindingChaos.Web/src/api/models/index.ts
@@ -1,5 +1,6 @@
 /* tslint:disable */
 /* eslint-disable */
+export * from './Amendment';
 export * from './AmplificationViewModel';
 export * from './AmplifySignalResponse';
 export * from './ApiEnvelopeOfPostRepliesViewModel';
@@ -16,8 +17,10 @@ export * from './ApiResponseOfIdeaDetailViewModel';
 export * from './ApiResponseOfIdeasFeedViewModel';
 export * from './ApiResponseOfPaginatedResponseOfCommonsListItemResponse';
 export * from './ApiResponseOfPaginatedResponseOfConcernListItemResponse';
+export * from './ApiResponseOfPaginatedResponseOfProjectListItemResponse';
 export * from './ApiResponseOfPaginatedResponseOfSocietyMemberResponse';
 export * from './ApiResponseOfPaginatedResponseOfUserGroupListItemResponse';
+export * from './ApiResponseOfProjectResponse';
 export * from './ApiResponseOfResolvedInviteLinkResponse';
 export * from './ApiResponseOfSignalDetailViewModel';
 export * from './ApiResponseOfSignalsFeedViewModel';
@@ -32,6 +35,7 @@ export * from './CommonsListItemResponse';
 export * from './ConcernListItemResponse';
 export * from './CoordinatesModel';
 export * from './CreatePostRequest';
+export * from './CreateProjectRequest';
 export * from './CreateReplyRequest';
 export * from './CreateSocietyInviteLinkRequest';
 export * from './CreateSocietyRequest';
@@ -54,6 +58,7 @@ export * from './JoinSocietyRequest';
 export * from './PaginatedResponseOfCommonsListItemResponse';
 export * from './PaginatedResponseOfConcernListItemResponse';
 export * from './PaginatedResponseOfIdeaListItemResponse';
+export * from './PaginatedResponseOfProjectListItemResponse';
 export * from './PaginatedResponseOfSignalViewModel';
 export * from './PaginatedResponseOfSocietyListItemResponse';
 export * from './PaginatedResponseOfSocietyMemberResponse';
@@ -62,6 +67,8 @@ export * from './PostRepliesViewModel';
 export * from './PostViewModel';
 export * from './PostsViewModel';
 export * from './ProblemDetails';
+export * from './ProjectListItemResponse';
+export * from './ProjectResponse';
 export * from './ProposeCommonsRequest';
 export * from './RaiseConcernRequest';
 export * from './ReferenceSignal';
